Переклад на українську

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,21 +1,21 @@
 <footer class="footer enhanced-footer">
     <div class="container footer-content grid-3">
         <div class="footer-column">
-            <h4>Quick Links</h4>
+            <h4>Швидкі посилання</h4>
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/my-tickets.html">My Tickets</a></li>
-                <li><a href="/create-ticket.html">Create Ticket</a></li>
+                <li><a href="/">Головна</a></li>
+                <li><a href="/my-tickets.html">Мої звернення</a></li>
+                <li><a href="/create-ticket.html">Створити звернення</a></li>
             </ul>
         </div>
         <div class="footer-column">
-            <h4>Contact</h4>
+            <h4>Контакти</h4>
             <p>Email: support@example.com</p>
-            <p>Phone: +1 234 567 8901</p>
+            <p>Телефон: +1 234 567 8901</p>
         </div>
         <div class="footer-column">
-            <h4>Help Centre</h4>
-            <p>&copy; 2025 Tech Support. All rights reserved.</p>
+            <h4>Центр допомоги</h4>
+            <p>&copy; 2025 Техпідтримка. Всі права захищено.</p>
         </div>
     </div>
 </footer>
